# Alimer.Physics

./: Alimer.Physics.sln  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  README.md
.github/workflows/: build.yml  build_native.yml
native/osx/: libalimer_physics.dylib
samples/01-HelloWorld/: 01-HelloWorld.csproj  Program.cs
samples/Alimer.SampleFramework/: Alimer.SampleFramework.csproj  Application.cs
src/Alimer.Physics/: Alimer.Physics.csproj  HandleDictionary.cs  NativeObject.cs  Physics.cs  PhysicsApi.cs  PhysicsBody.cs  PhysicsBodyDescription.cs  PhysicsBodyTransform.cs  PhysicsBodyType.cs  PhysicsShape.cs  PhysicsShapeType.cs  PhysicsWorld.cs  PhysicsWorldConfig.cs  PlatformLock.cs  UTF8Marshaler.cs
src/Alimer.Physics/runtimes/osx/native/: libalimer_physics.dylib
src/native/: CMakeLists.txt
src/native/include/: alimer_physics.h
src/native/src/: alimer_internal.h  alimer_physics.cpp
tests/: Directory.Build.props  Directory.Build.targets
tests/Alimer.Physics.UnitTests/: Alimer.Physics.UnitTests.csproj  PhysicsWorldTests.cs
